Release Notes

* 2/9/2016
  * changed HC DN for glexec

* 2/8/2016
  * added esPreemption

* 2/4/2016
  * added nucleus and eventService to jobSpec

* 2/3/2016
  * changed retryTask so that failed jobs in pending/running/scouting tasks can be retried

* 2/1/2016
  * added reassignTaskToNucleus

* 1/29/2016
  * changed to allow satellites in destinationSE

* 1/28/2016
  * setting nucleus to destinationSE

* 1/27/2016
  * removed __str__ in DdmSpec

* 1/26/2016
  * added getDNsForS3
  * added protection not to change failed jobs to holding

* 1/25/2016
  * sending objStoreIDs for ES merge
  * added network configurator and corepower collection

* 1/19/2016
  * changed addMetaData to limit the size of json for failed jobs

* 1/18/2016
  * changed to update status of ES jobs when ES-merge is done
  * enabled a protection for transferring->holding and holding->holding with final heartbeats

* 1/12/2016
  * changed AdderAtlas for alternative stage-out
  * added objstoreID to updateEventRange
  * changed eventLookupClientEI to use new EI client

* 1/11/2016
  * changed killJob so that 51 goes forward even if commandToPilot was already set

* 1/5/2016
  * using DISK for prestaging

* 12/28/2015
  * fixed updateUnmerged so that merging jobs fail only when max attempt is reached

* 12/15/2015
  * removed redundant log sending
  * added days to getScriptOfflineRunning
  * fixed dispatcher to release lock in finally

* 12/12/2015
  * killing pending jobs in small chunks to avoid timeout
  * added protection in panda.py for cgi exception

* 12/9/2015
  * changed AtlasAdder so that jobs don't go to transferring if only log
  * removed panda_ddm_relation

* 12/8/2015
  * fixed input duplication check for multiple consumers
  * using DISK for tape prestaging for analysis

* 12/7/2015
  * inroduced jobStatus=closed
  * changed Adder to send notification when --destSE doesn't work


* 12/2/2015
  * added a protection in insertNewJob to avoid duplicated input usage

* 11/30/2015