@@ -1001,6 +1001,109 @@ for loopIdx in ['low','high']:
     finisherThreadPool.join()
 
 
+# activator thread
+class ActivatorThr (threading.Thread):
+    def __init__(self,lock,proxyLock,ids,pool):
+        threading.Thread.__init__(self)
+        self.ids        = ids
+        self.lock       = lock
+        self.proxyLock  = proxyLock
+        self.pool       = pool
+        self.pool.add(self)
+                                        
+    def run(self):
+        self.lock.acquire()
+        try:
+            # get jobs from DB
+            ids = self.ids
+            self.proxyLock.acquire()
+            jobs = taskBuffer.peekJobs(ids,fromActive=False,fromArchived=False,fromWaiting=False)
+            self.proxyLock.release()
+            actJobs = []
+            for tmpJob in jobs:
+                if tmpJob == None or tmpJob.jobStatus == 'unknown':
+                    continue
+                # get LFN list
+                lfns   = []
+                guids  = []
+                scopes = []
+                for tmpFile in tmpJob.Files:
+                    # only input files are checked
+                    if tmpFile.type == 'input' and tmpFile.status != 'ready':
+                        lfns.append(tmpFile.lfn)
+                        scopes.append(tmpFile.scope)
+                # get file replicas
+                _logger.debug("%s check input files at %s" % (tmpJob.PandaID,tmpJob.computingSite))
+                tmpStat,okFiles = rucioAPI.listFileReplicas(scopes,lfns)
+                if not tmpStat:
+                    pass
+                else:
+                    # check if locally available
+                    siteSpec = siteMapper.getSite(tmpJob.computingSite)
+                    allOK = True
+                    for tmpFile in tmpJob.Files:
+                        # only input
+                        if tmpFile.type == 'input' and tmpFile.status != 'ready':
+                            # check RSEs
+                            if tmpFile.lfn in okFiles:
+                                for rse in okFiles[tmpFile.lfn]:
+                                    if siteSpec.ddm_endpoints.isAssociated(rse) and \
+                                            siteSpec.ddm_endpoints.getEndPoint(rse)['is_tape'] == 'N':
+                                        tmpFile.status = 'ready'
+                                        break
+                            # missing
+                            if tmpFile.status != 'ready':
+                                allOK = False
+                                _logger.debug("%s skip since %s:%s is missing" % (tmpJob.PandaID,tmpFile.scope,tmpFile.lfn))
+                                break
+                    if not allOK:
+                        continue
+                    # append to run activator
+                    _logger.debug("%s to activate" % tmpJob.PandaID)
+                    actJobs.append(tmpJob)
+            # update
+            _logger.debug("activating ...")
+            self.proxyLock.acquire()
+            taskBuffer.activateJobs(actJobs)
+            self.proxyLock.release()
+            _logger.debug("done")
+            time.sleep(1)
+        except:
+            errtype,errvalue = sys.exc_info()[:2]
+            _logger.error("ActivatorThr failed with %s %s" % (errtype,errvalue))
+        self.pool.remove(self)
+        self.lock.release()
+
+
+_memoryCheck("activator")
+
+# activate assigned jobs
+_logger.debug("==== activate assigned jobs ====")
+activatorLock = threading.Semaphore(3)
+activatorProxyLock = threading.Lock()
+activatorThreadPool = ThreadPool()
+timeLimit = datetime.datetime.utcnow() - datetime.timedelta(hours=1)
+# get jobs
+for ii in range(1000):
+    # lock
+    activatorLock.acquire()
+    activatorProxyLock.acquire()
+    ret,res = taskBuffer.lockJobsForActivator(timeLimit,100,800)
+    activatorProxyLock.release()
+    activatorLock.release()
+    if res == None:
+        _logger.debug("# of jobs to be activated for %s " % res)
+    else:
+        _logger.debug("# of jobs to be activated for %s " % len(res))
+    if res == None or len(res) == 0:
+        break
+    # run thread
+    actThr = ActivatorThr(activatorLock,activatorProxyLock,res,activatorThreadPool)
+    actThr.start()
+# wait
+activatorThreadPool.join()
+
+
 _memoryCheck("end")
 
 _logger.debug("===================== end =====================")
